@@ -270,6 +270,9 @@ void CChangedDlg::OnNMRclickChangedlist(NMHDR *pNMHDR, LRESULT *pResult)
 				{
 					//user clicked on the menu item "compare with working copy"
 					CString tempfile;
+					CString n1, n2;
+					CString name;
+					name = CUtils::GetFileNameFromPath(m_arPaths.GetAt(selIndex));
 					if (repoStatus <= svn_wc_status_normal)
 					{
 						tempfile = SVN::GetPristinePath(filepath);
@@ -301,7 +304,10 @@ void CChangedDlg::OnNMRclickChangedlist(NMHDR *pNMHDR, LRESULT *pResult)
 						filepath = tempfile;
 						tempfile = t;
 					} // if (repoStatus <= svn_wc_status_normal)
-					CUtils::StartDiffViewer(filepath, tempfile);
+
+					n1.Format(IDS_DIFF_WCNAME, name);
+					n2.Format(IDS_DIFF_BASENAME, name);
+					CUtils::StartDiffViewer(filepath, tempfile, FALSE, n2, n1);
 					theApp.DoWaitCursor(-1);
 					GetDlgItem(IDOK)->EnableWindow(TRUE);
 				}
@@ -399,10 +405,14 @@ void CChangedDlg::OnNMDblclkChangedlist(NMHDR *pNMHDR, LRESULT *pResult)
 	CString path1 = m_arPaths.GetAt(pNMLV->iItem);
 
 	CString path2 = SVN::GetPristinePath(path1);
+	CString name = CUtils::GetFileNameFromPath(path1);
 
 	if ((!CRegDWORD(_T("Software\\TortoiseSVN\\DontConvertBase")))&&(SVN::GetTranslatedFile(path1, path1)))
 	{
 		m_templist.Add(path1);
 	}
-	CUtils::StartDiffViewer(path2, path1);
+	CString n1, n2;
+	n1.Format(IDS_DIFF_WCNAME, name);
+	n2.Format(IDS_DIFF_BASENAME, name);
+	CUtils::StartDiffViewer(path2, path1, FALSE, n2, n1);
 }
